--- a/artpage/src/styles.scss
+++ b/artpage/src/styles.scss
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+body, html {
+    height: 100%;
+    margin: 0 auto;
+}
+body {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+} 
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 1.3em;
+    display: grid;
+    grid-template-columns: 30% auto;
+}
+
+.section {
+    width: 80%;
+    margin: 0 auto;
+    padding: 1.3em; 
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+ }
